--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,16 @@
+2001-06-24  Gary V. Vaughan  <gary@gnu.org>
+
+	Complete the new configure time tags creation facility based on
+	the ltcf-*.sh and ltconfig.in files from multi-language-branch:
+	* libtool.m4:  More refactoring and reformatting.
+	(_LT_AC_LANG_GCJ_CONFIG): Merged ltcf-gcj.sh from
+	multi-language-branch.
+	(_LT_AC_LANG_CXX_CONFIG): Merged ltcf-cxx.sh from
+	multi-language-branch.
+	* configure.in (AC_PROG_CXX, LT_AC_PROG_GCJ): Compiler checks must
+	be done before AC_PROG_LIBTOOL which appends tags based on their
+	results.
+
 2001-06-12  Robert Boehne  <rboehne@ricardo-us.com>
 
 	* docs/libtool.texi: Updated the libltdl interface documentation
@@ -28,12 +41,12 @@
 	multi-language-branch.
 	* configure.in: Added pdemo and tagdemo to CONF_SUBDIRS
 	and merged references to CXX and GCJ from multi-language-branch.
-	*pdemo: Added test directory from multi-language-branch.
-	*tagdemo: Added test directory from multi-language-branch.
-	*tests/Makefile.am: Merged additional tests from
+	* pdemo: Added test directory from multi-language-branch.
+	* tagdemo: Added test directory from multi-language-branch.
+	* tests/Makefile.am: Merged additional tests from
 	multi-language-branch.
-	*tests/pdemo-*.test: ditto.
-	*tests/tagdemo-*.test: ditto.
+	* tests/pdemo-*.test: ditto.
+	* tests/tagdemo-*.test: ditto.
 
 2001-05-30  Gary V. Vaughan  <gary@gnu.org>
 
