--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2001-06-25  Albert Chin-A-Young  <china@thewrittenword.com>
+
+	* libtool.m4: Prefer shl_load to dlopen on HP-UX because dlopen
+	won't work properly without a patch.
+	
 2001-06-25  Daniel Harvey <daniel@amristar.com.au>
 	
 	* libtool.m4 (ltdll_cmds): [$]0 doesn't appear to translate through
