--- a/THANKS
+++ b/THANKS
@@ -11,6 +11,7 @@ time and energy in helping to track down bugs, port to new systems,
 and generally assist in the libtool maintainership process:
 
 Akim Demaille <demaille@inf.enst.fr>
+Albert Chin-A-Young <china@thewrittenword.com>
 Andrey Slepuhin <pooh@msu.ru>
 Bruno Haible <haible@ilog.fr>
 Carl D. Roth <roth@cse.ucsc.edu>
