--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2001-06-28  Tim Van Holder  <tim.van.holder@pandora.be>
+
+	* pdemo/Makefile.am:  Use '=' isntead of '+=' to shut up
+	automake.
+	
 2001-06-27  Gary V. Vaughan  <gary@gnu.org>
 
 	From brad@openbsd.org:
